# TexBig---Object-Detection

./: README.md  predictions.json  pyproject.toml  setup.py
dlcv/: inference.py  main.py  model.py  texbigDataset.py  train.py  visualizations.py
dlcv/detection/: coco_eval.py  coco_utils.py  engine.py  transforms.py  utils.py
loss results/: FasterRCNN - ResNet 50 - lr=0.01 - 8 epochs.rtf
