[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dlcv"
version = "1.0"
authors = [
  { name="Islam Torky", email="islam.torky.alaaeldean.mohamed.abdel.torky@uni-weimar.de" },
]
description = "Final Project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "pandas",
    "numpy",
    "torch",
    "torchvision",
    "pycocotools",
    "pillow"
]